k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: experimental
  labels:
    name: experimental
