k8s/deployment.yml
{
  "kind": "Deployment",
  "apiVersion": "apps/v1",
  "metadata": {
    "name": "storelocator",
    "namespace": "experimental",
    "labels": {
      "app": "storelocator"
    }
  },
  "spec": {
    "replicas": 1,
    "selector": {
      "matchLabels": {
        "app": "storelocator"
      }
    },
    "template": {
      "metadata": {
        "labels": {
          "app": "storelocator"
        }
      },
      "spec": {
        "containers": [
        {
          "name": "storeslocator",
          "image": "michaeldemonio/storeslocator:latest",
          "imagePullPolicy": "Always",
          "ports": [{
                      "containerPort": 8080,
                      "name": "storelocator"
                    }],
          "resources": {
            "requests": {
              "cpu": "500m",
              "memory": "1G"
            }
          }
        }
        ]
      }
    }
  },
  "status": {
    "observedGeneration": 4,
    "replicas": 1,
    "updatedReplicas": 1,
    "readyReplicas": 1,
    "availableReplicas": 1,
    "conditions": [
    {
      "type": "Available",
      "status": "True",
      "reason": "MinimumReplicasAvailable",
      "message": "Deployment has minimum availability."
    }
    ]
  }
}
